tests/ui/suggestions/option-content-move-from-tuple-match.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/option-content-move-from-tuple-match.rs:2:11
   |
LL |     match (a, b) {
   |           ^^^^^^
LL |
LL |         (None, &c) => &c.unwrap(),
   |                 -
   |                 |
   |                 data moved here
   |                 move occurs because `c` has type `Option<String>`, which does not implement the `Copy` trait
   |
help: consider removing the borrow
   |
LL -         (None, &c) => &c.unwrap(),
LL +         (None, c) => &c.unwrap(),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
